Fix package name to match new location